--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,19 @@
     position: relative;
 }
 
-.box{
+.boxList{
     width: 100%;
     height: calc(100% / 5);
     border: solid 1px lightgray;
+}
+.box{
+    height: 100%;
+}
+
+.boxList img, .box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .arrowUp, .arrowDown{
@@ -43,7 +52,7 @@
     transform: translateX(-50%);
     border-radius: 50%;
     background-color: lightgray;
-    padding: 5px 10px 5px 10px;
+    padding: 15px;
 }
 
 .arrowUp{
@@ -54,26 +63,16 @@
     bottom: 10px;
 }
 
+.arrowUp i, .arrowDown i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 /* DEBUG */
 
-.debug .container{
-    background-color: tomato;
-}
 
-.debug .slider {
-    background-color: yellowgreen;
-}
 
-.debug .imgWithText{
-    background-color: lightpink;
-    border: solid 1px red;
-}
 
-.debug .imgSequence{
-    background-color: lightblue;
-    border: solid 1px blue;
-}
-.debug .box{
-    background-color: lightgreen;
-    border: solid 1px lightgray;
-}
