--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,20 @@
     width: 100%;
     height: calc(100% / 5);
     border: solid 1px lightgray;
+    background-color: black;
 }
+
+.opacity img{
+    opacity: .5;
+}
+
 .box{
     height: 100%;
+    display: none;
+}
+
+.active{
+    display: block;
 }
 
 .boxList img, .box img{
@@ -45,6 +56,8 @@
     height: 100%;
     object-fit: cover;
 }
+
+
 
 .arrowUp, .arrowDown{
     position: absolute;
