--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,23 @@
     display: flex;
 }
 
+.textImg{
+    width: 80%;
+    position: absolute;
+    bottom: 10px;
+    color: white;
+    border: 1px solid red;
+}
+.country{
+    text-align: right;
+    padding-right: 10px;
+    margin-bottom: 5px;
+
+}
+
 .imgWithText{
     width: 80vw;
     height: 100%;
-    
 }
 
 .imgSequence{
@@ -30,6 +43,8 @@
     height: 100%;
     position: relative;
 }
+
+
 
 .boxList{
     width: 100%;
@@ -66,6 +81,7 @@
     border-radius: 50%;
     background-color: lightgray;
     padding: 15px;
+    z-index: 999;
 }
 
 .arrowUp{
